# arches

./: .gitignore  Containerfile  Containerfile.install  Makefile  README.md  README_POWER_MANAGEMENT.md  pyproject.toml
installer/: pyproject.toml
installer/arches_installer/: __init__.py  __main__.py
installer/arches_installer/core/: __init__.py  auto.py  bootloader.py  disk.py  disk_descriptor.py  disk_layout.py  firstboot.py  gpu_stacks.py  hardware.py  hardware_rescan.py  host_install.py  install.py  module.py  network.py  pipeline.py  platform.py  run.py  snapper.py  template.py
installer/arches_installer/templates/: dev-workstation.toml  vm-server.toml
installer/arches_installer/tui/: __init__.py  app.py  confirm.py  disk_select.py  hardware_confirm.py  layout_select.py  module_select.py  network.py  partition.py  progress.py  raid_config.py  template_select.py  user_setup.py  welcome.py
installer/tests/: conftest.py
installer/tests/core/: test_auto.py  test_bootloader.py  test_disk.py  test_disk_descriptor.py  test_disk_layout.py  test_disk_layout_roles.py  test_disk_roles_state.py  test_firstboot.py  test_gpu_stacks.py  test_hardware.py  test_host_install.py  test_install.py  test_main.py  test_module.py  test_multi_disk_e2e.py  test_network.py  test_pipeline.py  test_platform.py  test_qemu_disk_descriptors.py  test_run.py  test_shipped_invariants.py  test_snapper.py  test_template.py
installer/tests/tui/: test_confirm.py  test_module_select.py  test_network.py  test_partition.py  test_progress.py  test_template_select.py  test_user_setup.py  (+1 more)
(+184 files in other folders)
