[project]
name = "arches-installer"
version = "0.1.0"
description = "Arches — a custom installer TUI for Arch Linux derivatives"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
    "ruff>=0.4",
]

[project.scripts]
arches-install = "arches_installer.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["installer"]

[tool.setuptools.package-data]
arches_installer = ["templates/*.toml"]

[tool.ruff]
src = ["installer"]

[tool.pytest.ini_options]
testpaths = ["installer/tests"]
asyncio_mode = "auto"
