[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arches-installer"
version = "0.1.0"
description = "Arches — custom Arch/CachyOS installer TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
    "ruff>=0.4",
]

[project.scripts]
arches-install = "arches_installer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
arches_installer = ["templates/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
